<resources>
    <string name="app_name">Project</string>
    <string name="emploi">Looking for a job</string>
    <string name="employeur">Find candidates</string>
    <string name="email">nom@exmple.com</string>
    <string name="MDP">Password</string>
    <string name="connexion">Connection</string>
    <string name="MDP_oublie">Forgot your password ?</string>
    <string name="creation_compte">create an account</string>
    <string name="nom">Name</string>
    <string name="prenom">First name</string>
    <string name="C_MDP">Password Confirmation</string>
    <string name="obligatoire">Mandatory</string>
    <string name="email_nn_valide">the email address is invalid</string>
    <string name="compte_exsits_deja">This account already exists</string>
    <string name="MDP_nn_valide">Password is invalid</string>
    <string name="MDP_cara_Problem">6 minimum character</string>
    <string name="cree_avec_scuces">Created successfully</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="force_de_profile">Force du profile : </string>
    <string name="descrpition_compte_debutant">Débutant</string>
    <string name="description_compte_intermediaire">Intermédiaire</string>
    <string name="description_compte_avancer">Avancé</string>
    <string name="contact">Contact</string>
    <string name="competence_recommandations">Competencies and recommendations</string>
    <string name="foramtion">Training</string>
    <string name="ajouter_une_formation">ADD A NEW TRAINING</string>
    <string name="titre_du_profil">Profile title</string>
    <string name="resume">summary</string>
    <string name="ecole">School</string>
    <string name="diplome">Diploma</string>
    <string name="domaine_etude">field of studies</string>
    <string name="description">Description</string>
    <string name="enregistre">Record</string>
    <string name="en">  in  </string>
    <string name="annuler">cancel</string>
    <string name="reessayer">Retry</string>
    <string name="de">Of</string>
    <string name="a">A</string>
    <string name="periode">Period</string>
    <string name="date">jj/mm/aaaa</string>
    <string name="numero_tele">phone number</string>
    <string name="info1">Web developer</string>
    <string name="info2">Front end developer</string>
    <string name="info3">Full satck developer</string>
    <string name="info4">Java developer</string>
    <string name="info5">Android developer</string>
    <string name="info6">Developer big data</string>
    <string name="info7">Back end developer</string>
    <string name="info8">J2ee java developer</string>
    <string name="info9">Javascript developer</string>
    <string name="info10">Application developer</string>
    <string name="bio1">Sterilization agent</string>
    <string name="bio2">Laboratory animal</string>
    <string name="bio3">aromaticien</string>
    <string name="bio4">bio-informaticien</string>
    <string name="bio5">botanist</string>
    <string name="bio6">inseminator</string>
    <string name="bio7">Forensic pathologist</string>
    <string name="bio8">taxidermist</string>
    <string name="com1">Buyer of advertising space</string>
    <string name="com2">Press officer</string>
    <string name="com3">author</string>
    <string name="com4">cartographer</string>
    <string name="com5">In charge of marketing studies</string>
    <string name="com6">In charge of dissemination</string>
    <string name="com7">production manager</string>
    <string name="com8">Advertising officer</string>

    <string name="nouvelle_comp">A new competence</string>
    <string name="ajouter_a_liste">Has been added to the list</string>
    <string name="deja_dans_la_liste">Is already in the list</string>
    <string name="postuler">apply</string>
    <string name="phrase_magice">Your profile is now visible to all recruiters, you can edit your profile at any time and repostuler</string>
    <string name="merci">Thank you</string>
    <string name="deconnecter">disconnect</string>

    <string name="nombre_cv">The number of CVs per domain</string>
    <string name="societe">Company</string>
    <string name="info">Computing</string>
    <string name="bio">Biology</string>
    <string name="comm">Communication-information</string>
    <string name="domaine_de_recherche">Select the area of your search:</string>
    <string name="domaine_vide">This domain is empty</string>
    <string name="emp_list">to hire</string>
    <string name="le_email">e-mail</string>
    <string name="champ_vide">This field is empty</string>
    <string name="delete_condidature">Remove this candidacy</string>
    <string name="from">from</string>



    <string name="prefrence_email">email</string>
    <string name="prefrence_domaine">domaine</string>
    <string name="prefrence_prenom">prenom</string>
    <string name="prefrence_num">num</string>
    <string name="prefrence_nom">nom</string>
    <string name="prefrence_nom_emploi">nom</string>
    <string name="prefrence_prenom_emploi">prenom</string>
    <string name="prefrence_pass_emploi">passe</string>
    <string name="prefrence_passC_emploi">passec</string>
    <string name="prefrence_email_emploi">email</string>
    <string name="prefrence_nom_emp">nom</string>
    <string name="prefrence_prenom_emp">prenom</string>
    <string name="prefrence_pass_emp">passe</string>
    <string name="prefrence_passC_emp">passec</string>
    <string name="prefrence_email_emp">email</string>
    <string name="prefrence_soci_emp">soci</string>
    <string name="prefrence_id5">id_prefrence_tachi_hatim_projet5</string>
    <string name="prefrence_id4">id_prefrence_tachi_hatim_projet4</string>
    <string name="prefrence_id3">id_prefrence_tachi_hatim_projet3</string>
    <string name="prefrence_id2">id_prefrence_tachi_hatim_projet2</string>
    <string name="prefrence_id">id_prefrence_tachi_hatim_projet</string>
    <string name="prefrence_quoi">quoi</string>
    <string name="sujet">subject</string>
    <string name="prefrence_object">object</string>
    <string name="prefrence_sujet">sujet</string>
    <string name="prefrence_hcode">hocde</string>

</resources>
