<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    >
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <AutoCompleteTextView
            android:id="@+id/E_formule_main_emploi_dialog_ecole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ecole"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <AutoCompleteTextView
            android:id="@+id/E_formule_main_emploi_dialog_diplome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/diplome"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <AutoCompleteTextView
            android:id="@+id/E_formule_main_emploi_dialog_domaine_etude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/domaine_etude"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
        <AutoCompleteTextView
            android:id="@+id/E_formule_main_emploi_dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:maxLength="200"
            />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/periode"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColorHighlight="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            >
            <AutoCompleteTextView
                android:id="@+id/E_formule_main_emploi_dialog_date_debut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/de"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="200"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            >
            <AutoCompleteTextView
                android:id="@+id/E_formule_main_emploi_dialog_date_fin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="200"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</LinearLayout>