<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back_employeur"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/line3"
                android:background="@drawable/textview_rond"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_cv"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/main_employeur_tx_text"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/line4"
                android:background="@drawable/textview_rond"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/line3"
                >
                <android.support.v7.widget.RecyclerView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_margin="20dp"
                    android:id="@+id/main_employeur_RecycleV"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/textview_rond"
                android:layout_margin="20dp"
                android:layout_below="@+id/line4"
                android:id="@+id/line5"
                >
                <EditText
                    android:layout_margin="15dp"
                    android:id="@+id/main_employeur_E_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textWebEmailAddress"
                    android:layout_gravity="center_vertical"
                    />

                <EditText
                    android:layout_margin="15dp"
                    android:id="@+id/main_employeur_E_mdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/MDP"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="15dp"
                    />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_employeur_btn_login"
                android:layout_below="@+id/line5"
                android:layout_centerHorizontal="true"
                android:text="@string/connexion"
                android:background="@drawable/circle_btn"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:background="@drawable/circle_btn"
                android:id="@+id/main_employeur_btn_create"
                android:drawableTop="@drawable/add_employeur"
                android:paddingTop="1dp"
                android:text="@string/creation_compte"
                android:textColor="@android:color/white"
                android:layout_below="@+id/main_employeur_btn_login"
                android:layout_alignRight="@+id/line5"
                android:layout_alignEnd="@+id/line5" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>