<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      android:orientation="horizontal"
      >
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btn_formule_main_emploi_back"
          android:background="@drawable/back1"
          android:layout_margin="10dp"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          />
      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btn_formule_main_emploi_save"
          android:background="@drawable/save"
          android:layout_margin="10dp"
          />
  </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_formulaire"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/image_def_menu"
                app:civ_border_width="3dp"
                app:civ_border_color="#FF000000"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                />

            <ImageButton
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:id="@+id/btn_image_change_main_emploi_formulaire"
                />
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">
            <AutoCompleteTextView
                android:id="@+id/E_formule_main_emploi_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prenom"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">
            <AutoCompleteTextView
                android:id="@+id/E_formule_main_emploi_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"

                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">
            <AutoCompleteTextView
                android:id="@+id/E_formule_main_emploi_formation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foramtion"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"

                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_formule_main_emploi_ajouter_une_formation"
            android:text="@string/ajouter_une_formation"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="@color/colorAccent"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">
            <AutoCompleteTextView
                android:id="@+id/E_formule_main_emploi_titre_du_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titre_du_profil"
                android:inputType="text"
                android:maxLength="100"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            >
            <AutoCompleteTextView
                android:id="@+id/E_formule_main_emploi_resume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/resume"
                android:inputType="text"
                android:maxLength="200"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>


</LinearLayout>